# smake

./: .gitignore  README.md  configure.ac  makefile.py  smake.py
examples/excamera/: gen_makefile.py  smake
examples/wordsearch/: Makefile  input.txt  smake
src/: Makefile.am
src/lambdareq/: Makefile.am  launch.hh
src/launch/: launch.cc
src/pylaunch/: Makefile.am  pylaunchmodule.cc
src/runner/: Makefile.am  callback_server.py  graph.py  lambda_function.py  local_runner.py  makefile.py  smake.py
